// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard debe de incrementar el counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    Add
  </button>
</div>
`;

exports[`ProductCard debe mostrar el componente correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Card
  </h1>
</div>
`;
